<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="60dp"
        android:textSize="48sp"
        android:background="#0000f0"
        android:textAlignment="center"
        android:text="@string/order_coffee"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/simple_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="32sp"
            android:textAlignment="center"
            android:text="@string/select_a_coffee_type"/>

        <TextView
            android:id="@+id/coffee_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text=""/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:gravity="center"
        android:popupBackground="#00f2f2"
        android:layout_margin="16dp"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/minus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:layout_marginEnd="49dp"
        android:text="@string/minus_sign"
        android:textSize="32sp"
        android:onClick="minusValue"/>

    <TextView
        android:id="@+id/value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:text="@string/_1"
        android:textSize="32sp" />

    <Button
        android:id="@+id/plus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="16dp"
        android:layout_marginStart="72dp"
        android:text="@string/plus_sign"
        android:textSize="32sp"
        android:onClick="plusValue"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="16dp"
        android:text="@string/order"
        android:textSize="32sp"
        android:onClick="order"
        />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>