<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".orderconfirmationactivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif"
            android:textSize="32sp"
            android:textAlignment="center"
            android:text="@string/confirmation_of_order" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#3366ff">

                <TextView
                    android:id="@+id/coffee_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/coffee_type"
                    android:textColor="@color/design_default_color_error"/>

                <TextView
                    android:id="@+id/coffee_quantity"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/quantity"
                    android:textColor="@color/design_default_color_error"/>

                <TextView
                    android:id="@+id/coffee_price"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/price_per_quantity"
                    android:textColor="@color/design_default_color_error"/>

                <TextView
                    android:id="@+id/total"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/total"
                    android:textColor="@color/design_default_color_error"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">
                <TextView
                    android:id="@+id/coffee_name_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/coffee_quantity_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/coffee_price_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="" />

                <TextView
                    android:id="@+id/total_value"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textAlignment="center"
            android:text="@string/confirm_order" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>